[tool.poetry]
name = "header-propagation"
version = "1.0.0"
description = "Middleware propagating headers from incoming requests to outgoing requests in fastapi"
authors = ["Joe Raad <joeraad12@gmail.com>"]
maintainers = ["Joe Raad <joeraad12@gmail.com>"]
license = "BSD-4-Clause"
readme = "README.md"
homepage = "https://github.com/joeraad/header-propagation"
repository = "https://github.com/joeraad/header-propagation"
keywords = [
    'asgi',
    'fastapi',
    'starlette',
    'async',
    'headers',
    'propagation',
    'middleware',
]
classifiers = [
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "header_propagation" },
]

[tool.poetry.dependencies]
python = "^3.9"
starlette = ">=0.18"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
pytest = "*"
pytest-mock = "*"
pytest-asyncio = "*"
httpx = "*"
requests = "*"
websockets = "*"
fastapi = "*"
coverage = [
    { extras = ["toml"], version = "^6", python = ">=3.10" },
    { version = "^5 || ^6" },
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]